--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "@saisunkari19/ts-client",
+  "name": "@autonomy/ts-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "Autonomy Network client SDK",
   "main": "lib/index.js",
-  "description": "test client for cosmos",
-   "types": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "prepare" : "npm run build",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "cosmos",
+    "autonomy",
+    "ts-client"
+  ],
+  "author": "Sai Krishna Sunkari <saisunkari19@protonmail.com>",
   "license": "ISC",
   "dependencies": {
     "@cosmjs/proto-signing": "^0.25.5",
@@ -26,7 +29,7 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0"
   },
-  "files": ["lib/**/*"],
-  "keywords": ["cosmos", "client-js"],
-   "author": "saisunkari19",
+  "files": [
+    "lib/**/*"
+  ]
 }
