--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,12 @@
         "esModuleInterop":true,
         "sourceMap": true,
         "declaration": true,
-        "strict":true
+        "strict":true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "strictNullChecks": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
