--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions":{
+        "baseUrl": ".",
         "module": "commonjs",
         "target": "es2017",
         "lib": ["ES2017"],
@@ -12,7 +13,8 @@
         "noUnusedParameters": true,
         "strictNullChecks": true,
         "noImplicitAny": true,
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
+        "downlevelIteration": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
