--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@autonomysdk/ts-client",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Autonomy Network client SDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -22,7 +22,9 @@
   "dependencies": {
     "@cosmjs/proto-signing": "^0.25.5",
     "@cosmjs/stargate": "^0.25.5",
-    "@cosmjs/tendermint-rpc": "^0.25.5"
+    "@cosmjs/tendermint-rpc": "^0.25.5",
+    "@types/uuid": "^8.3.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "prettier": "^2.3.2",
