--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "es2017",
         "lib": ["ES2017"],
         "outDir": "lib",
+        "moduleResolution": "node",
         "esModuleInterop":true,
         "declaration": true,
         "sourceMap": true,
